added testing jquery

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE HTML>
 
 <html>
-
+  <script type="text/javascript" src="public/jquery.min.js"></script>
+  <script type="text/javascript" src="public/testing.js"></script>
 <head>
 
 </head>
 
 <body>
-  <p> Hello World </p>
+
+  <div>
+    <p> Hello World </p>
+  </div>
+
 </body>
 
 </html>
