added app.js and test

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 
 <html>
   <script type="text/javascript" src="public/jquery.min.js"></script>
-  <script type="text/javascript" src="public/testing.js"></script>
+  <script type="text/javascript" src="public/app.js"></script>
 <head>
 
 </head>
 
 <body>
 
-  <div>
+  <div id="testing">
     <p> Hello World </p>
   </div>
 
