--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <script type="text/javascript" src="public/jquery.min.js"></script>
   <script type="text/javascript" src="public/app.js"></script>
+  <link rel="stylesheet" type="text/css" href="public/stylesheet.css">
 <head>
 
 </head>
