added assets folder with images and sounds

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 
 <body>
-
-  <div id="testing">
-    <p> Hello World </p>
-  </div>
-
+  <div id="gamecontainer">
+    <div id="gamescreen">
+      <div id="sky" class="animated">
+        <div id="testing">
+         <p> Hello World </p>
+       </div>
+     </div>
+   <div>
+  <div>
 </body>
 
 </html>
