--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <html>
   <script type="text/javascript" src="public/jquery.min.js"></script>
+  <script type="text/javascript" src="public/buzz.min.js"></script>
+  <script type="text/javascript" src="public/jquery.transit.min.js"></script>
   <script type="text/javascript" src="public/app.js"></script>
   <link rel="stylesheet" type="text/css" href="public/stylesheet.css">
 <head>
@@ -12,8 +14,10 @@
   <div id="gamecontainer">
     <div id="gamescreen">
       <div id="sky" class="animated">
+        <div id="flyarea">
         <div id="testing">
          <p> Hello World </p>
+       </div>
        </div>
      </div>
    <div>
